crates/tabby/tests/snapshots/goldentests__run_golden_tests_cpu.snap
---
source: crates/tabby/tests/goldentests.rs
expression: "golden_test(json!({\n                \"language\": \"python\", \"seed\": 0, \"segments\":\n                { \"prefix\": \"def is_prime(n):\\n\", }\n            })).await"
---
choices:
  - index: 0
    text: "\t\tif n == 1:\n\t\t\treturn False\n\t\tif n % 2 == 0:\n\t\t\treturn False\n\t\tfor i in range(3, int(n**0.5)+1, 2):\n\t\t\tif n % i == 0:\n\t\t\t\treturn False\n\t"
debug_data: {}
id: test-id
